# screenshot-translation

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
app/: config.py  dependencies.py  main.py
app/middleware/: rate_limit.py
app/models/: schemas.py
app/providers/: baidu.py  base.py
app/routers/: translate.py
